# sfl_lib

./: Cargo.toml  index.html  transition.html
src/: lib.rs  sfl.rs
tests/: get_division_matches.rs  get_simulate_result.rs
