[package]
name = "sfl_lib"
version = "0.1.0"
authors = ["cuhey3 <uotaneet@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = "0.9.0-alpha.2"
wasm-bindgen = "0.2.63"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.69", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Location',
    'BinaryType',
    'Blob',
    'ErrorEvent',
    'FileReader',
    'MessageEvent',
    'ProgressEvent',
    'WebSocket',
] }
console = "0.15.8"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.70"
wasm-bindgen-test = "0.3.13"

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
